# supps

./: README.md  inventory.json  main.py  pyproject.toml  scrape.js  scrape_iherb_orders.js  supps.json  supps.toml
src/sup/: _configs_to_sql.py  _create_tables.py  cli.py  commands.py  main.py  models.py  queries.py  sql_funcs.py
src/sup/scripts/: create_user.py
